<resources>
    <string name="app_name">Intelife</string>
    <string name="tasks">My Tasks</string>
    <string name="business">Intelife Business Sales</string>
    <string name="news">Intelife News</string>
    <string name="home">Intelife Home Sales</string>
    <string name="performance">My Performance</string>
    <string name="recruiter">Intelife Recruiter</string>
    <string name="compensation">My Compensation</string>
    <string name="trainer">Intelife Trainer</string>
    <string name="assessment">Site Assessment</string>
    <string name="businessName">Business Name</string>
    <string name="address">Address</string>
    <string name="contactName">Contact Name</string>
    <string name="position">Position</string>
    <string name="email">Email</string>
    <string name="phone">Phone No.</string>
    <string name="analysisQuestions">Analysis Questions</string>
    <string name="businessInfo">Business Info</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="asterisk">*</string>
    <string name="blank" />
    <string name="cancel">Cancel</string>
    <string name="questionMark">\?</string>
    <string name="conjunction">" and "</string>
    <string name="submitConfirmation">"Are you sure you want to submit with incomplete "</string>
    <string name="listSeparator">", "</string>
    <string name="delete">Delete</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="quoteBuilder">Quote Builder</string>
    <string name="subtotal">"Subtotal: "</string>
    <string name="discount">"Discount: "</string>
    <string name="total">"Total: "</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
</resources>
