<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/quantity"
        android:textSize="32dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/description"
        android:textSize="32dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/price"
        android:textSize="32dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete"
        android:layout_weight="2" />

</LinearLayout>
