<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hackathon.intelife.MainActivity" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <ImageButton
                android:id="@+id/tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tasks"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <ImageButton
                android:id="@+id/business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/business"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/tasks"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/business"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <ImageButton
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/news"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <ImageButton
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/news"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/home"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <ImageButton
                android:id="@+id/performance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/performance"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />
            <ImageButton
                android:id="@+id/recruiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/recruiter"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/performance"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/recruiter"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <ImageButton
                android:id="@+id/compensation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/compensation"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />
            <ImageButton
                android:id="@+id/trainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/trainer"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/compensation"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/trainer"
                android:textSize="32dp"
                android:layout_weight="1" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

    </GridLayout>

</ScrollView>

